# tjsc

./: .gitignore  crawler.py  main.py  pyproject.toml
.github/workflows/: build.yml
docs/: file_names.tx  proposta.md
old_code/: Buscador06.py  Buscador08.py  Buscador09.py  Buscador11.py
src/: constants.py  dto.py  ocr.py  query_language.py  tests.py  text_searching.py  types.py
src/crawler/: locator.py  login.py  process.py
src/interface/: app.py  crawler.py  loading.py  login.py  logo.py  processes_page.py  root.py  select_parameters.py
