[project]
name = "TJSC"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "async-tkinter-loop>=0.10.0",
    "easyocr>=1.7.2",
    "pdf2image>=1.17.0",
    "playwright>=1.55.0",
    "pyparsing>=3.2.5",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "ruff>=0.13.3",
]
